# GUIPhotoReductionTool

./: CMakeLists.txt  PhotoOptions.h  PhotoReducerModel.cpp  PhotoReducerModel.h  PhotoResizer.cpp  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  options.cpp  options.h  options.ui
